this is my 5th designe for psd to html its totally responsive

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           <a href="#" class="footer_part_01_link">ipsumam et.</a>
         </div>
         <div class="footer_part_02">
-          <h3 class="footer_part_02">GET SUPPORT</h3>
+          <h3 class="footer_part_02_heading">GET SUPPORT</h3>
           <div class="footer_part_02_info_wrap">
             <div class="">
               <i class="fa fa-map-marker-alt"></i>
@@ -337,7 +337,7 @@
           </div>
         </div>
         <div class="footer_part_03">
-          <h3 class="footer_part_03">COMPANY</h3>
+          <h3 class="footer_part_03_heading">COMPANY</h3>
           <ul class="footer_menu_ul">
             <li class="footer_menu_lli">
               <a href="#" class="footer_menu_link">Home</a>
@@ -357,7 +357,7 @@
           </ul>
         </div>
         <div class="footer_part_04">
-          <h3 class="footer_part_04">SERVICE</h3>
+          <h3 class="footer_part_04_heading">SERVICE</h3>
           <a href="#" class="footer_part_01_link">comando</a><br>
           <a href="#" class="footer_part_01_link">Lorem, ipsum.</a><br>
           <a href="#" class="footer_part_01_link">sit amet.</a><br>
